--- a/css/style.css
+++ b/css/style.css
@@ -3,52 +3,53 @@
 }
 
 body {
-	font-family: sans-serif;
+	font-family: Verdana, Geneva, sans-serif;
+	font-size: 85%;
 }
 h1 {
 	text-align: center;
-	margin: 25px 0px 25px 0px;
+	margin: 20px 0px 20px 0px;
 }
 h2 {
 	display: inline-block;
-	border: 2px solid black;
+	font-size: 132%;
+	border: 2px solid grey;
 	text-align: center;
-	padding: 1px;
-	width: 200px;
+	width: 125px;
+	padding: 2px;
 	margin-top: -12px;
-	right: -1px;
+	right: -2px;
 	top: 10px;
 	position: absolute;
 }
 section {
 	text-align: left;
-
-	border: 2px solid black;
-	margin: 20px;
-	padding: 23px;
-	background-color: grey;
+	border: 2px dotted silver;
+	margin: 23px;
+	padding: 25px;
+	background-color: lightgrey;
 	position: relative;
 }
 #monitor {
-	background-color:#ededed;
+	background-color:#eeffee;
 }
 #mouse {
-	background-color: #eeff88;
+	background-color: teal;
 }
 #key {
-	background-color: maroon;
+	background-color: #295683;
 }
 .row {
 	width: 100%;
-	padding: 15px;
 }
 
 /* Media Queries */
 
 @media (min-width: 992px) {
-	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5,
-	.col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10
-	.col-lg-11, .col-lg-12 {
+	.col-lg-1, .col-lg-2, .col-lg-3, 
+	.col-lg-4, .col-lg-5,.col-lg-6, 
+	.col-lg-7, .col-lg-8, .col-lg-9,
+	.col-lg-10,	.col-lg-11, .col-lg-12 {
 		float: left;
 	}
 	.col-lg-1 {width: 8.33%;}
@@ -66,9 +67,10 @@ section {
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
-	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5,
-	.col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10,
-	.col-md-1, .col-md-12{
+	.col-md-1, .col-md-2, .col-md-3, 
+	.col-md-4, .col-md-5,	.col-md-6,
+	.col-md-7, .col-md-8, .col-md-9, 
+	.col-md-10,	.col-md-1, .col-md-12 {
 		float: left;
 	}
 	.col-md-1 {width: 8.33%;}
